Fix alignment.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -84,6 +84,12 @@ section {
     text-align: center;
 }
 
+.section-content-item-header {
+    font-size: 18px;
+    padding-bottom: 8px;
+    text-align: center;
+}
+
 .section-content-item-body {
     font-size: 36px;
     padding: 15px 0;
